updated toggle button for android devices

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto" href="#goal">Goal</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <!------Dark mode button--------->
-          <li><img class="nav-link scrollto" src="assets/img/m3.png" style="margin-top: 1%; margin-left: 90%;"  width="25%" id="moon"></li>
+          <li><img class="nav-link scrollto" src="assets/img/m3.png" style="margin-top: 2%; margin-left: 0%;"  width="80px" id="moon"></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -170,10 +170,11 @@
           <div class="col-lg-6 mt-5 mt-lg-0 d-flex">
             <div class="row align-self-center gy-4">
 
-              <div class="col-md-6" data-aos="zoom-out" data-aos-delay="200" data-toggle="modal" data-target="#m1">
+              <div class="col-md-6" data-aos="zoom-out" data-aos-delay="200" data-toggle="modal" data-target="#m1"> 
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-code-slash"></i>
                   <h3>Ecommerce and web applications</h3>
+                  
                 </div>
               </div>
 
@@ -506,7 +507,7 @@
 
 
   <!-- Modal Enterprise mobility solutions -->
-  <div class="modal fade" id="m2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+  <div class="modal fade " id="m2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
