--- a/index.html
+++ b/index.html
@@ -420,10 +420,10 @@
             <p>Thank you for your interest in AIzonLabs. Please contact us using the information below. To get the
               latest updates from AIzonLabs, subscribe to a newsletter or connect with us on social media.</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
+              <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
+              <a href="https://www.facebook.com/aizonlabs" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+              <!-- <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a> -->
+              <a href="https://www.linkedin.com/company/aizon-labs/?viewAsMember=true" target="_blank" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
             </div>
           </div>
 
